Feat: expose meta tags, improve seo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>User Management System</title>
+    <meta name="description" content="User management system with Typescript, React, Redux toolkit, Mui and next js, prisma, postgres backend"/>
+    <meta name="keywords" content="Users, system, user management">
+    <meta name="author" content="Akshay">
+
+    <meta property="og:title" content="User Management System">
+    <meta property="og:description"  content="User management system with Typescript, React, Redux toolkit, Mui and next js, prisma, postgres backend"/>
+    <!-- <meta property="og:image" content="https://image-url-og-image"> can be added once we have og image -->
+    <meta property="og:url" content="hhttps://user-management-system-frontend-mu.vercel.app/">
+    <meta property="og:type" content="website">
+  
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="User Management System">
+    <meta name="twitter:title"  content="User management system"/>
+    <meta name="twitter:description" content="User management system with Typescript, React, Redux toolkit, Mui and next js, prisma, postgres backend"/>
+    <!-- <meta name="twitter:image" content="https://yourdomain.com/assets/mocklify-preview.png"> can be added once we have og image -->
+
+    <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon"> can be added if we have favicon icon -->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div id="root"></div>
